--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <script src="node_modules/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
     <script src="node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
     <!-- 2. Load our 'third party module' -->
-    <script src='app/modules/langdoggler/MaterialModule.js'></script>
-    <script src='app/modules/langdoggler/materialInputComponent.js'></script>
+    <script src='app/modules/langdoggler/Material.module.js'></script>
+    <script src='app/modules/langdoggler/materialInput.component.js'></script>
     <!-- 3. Load our 'modules' -->
-    <script src='app/injectables/task.service.js'></script>
+    <script src='app/injectables/taskService.injectable.js'></script>
     <script src='app/components/stats/stats.js'></script>
     <script src='app/components/core/core.component.js'></script>
     <script src='app/components/taskList/taskList.js'></script>
