--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="node_modules/rxjs/bundles/Rx.umd.js"></script>
     <script src="node_modules/@angular/core/bundles/core.umd.js"></script>
     <script src="node_modules/@angular/common/bundles/common.umd.js"></script>
+    <script src="node_modules/@angular/router/bundles/router.umd.js"></script>
     <script src="node_modules/@angular/compiler/bundles/compiler.umd.js"></script>
     <script src="node_modules/@angular/forms/bundles/forms.umd.min.js"></script>
     <script src="node_modules/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
@@ -23,10 +24,15 @@
     <!-- 3. Load our 'modules' -->
     <script src='app/injectables/taskService.injectable.js'></script>
     <script src='app/components/stats/stats.js'></script>
+    <script src='app/components/pages/about/about.js'></script>
+    <script src='app/components/pages/contact/contact.js'></script>
+    <script src='app/components/pages/welcome/welcome.js'></script>
+    <script src='app/components/stats/stats.js'></script>
     <script src='app/components/core/core.component.js'></script>
     <script src='app/components/taskList/taskList.js'></script>
     <script src='app/components/taskTools/taskTools.js'></script>
     <script src='app/components/task/task.js'></script>
+    <script src='app/components/routing/routing.js'></script>
     <script src='app/modules/core.module.js'></script>
     <script src='app/main.js'></script>
 </head>
